k8s/namespace.yaml
## VOTE-UI  (Frontend)

apiVersion: v1
kind: Namespace
metadata:
  name: vote-frontend
  labels:
    access: "access-to-vote-backend"
