k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: vote-ui
  name: vote-ui
  namespace: vote-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: vote-ui
  template:
    metadata:
      labels:
        app: vote-ui
        date: 27-11-2024
        foo: gitops
    spec:
      containers:
        - image: quay.io/openshift-pipeline/vote-ui:latest
          imagePullPolicy: Always
          name: vote-ui
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 9090
              protocol: TCP
