k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/balance: "random"
    haproxy.router.openshift.io/disable_cookies: "true"
  labels:
    app: pipelines-vote-ui
  name: pipelines-vote-ui
  namespace: pipelines-tutorial
  #namespace: vote-frontend
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: pipelines-vote-ui
    weight: 100
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
